hw2/config/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw2-deployment
  labels:
    app: hw2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw2
  template:
    metadata:
      labels:
        app: hw2
    spec:
      containers:
        - name: hw2
          image: viacheslavtarasov/otus-ma2023-hw1:v1.0
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
