hw2/config/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw2-service
spec:
  type: NodePort
  selector:
    app: hw2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
